--- a/frogcall_markdown_script.Rmd
+++ b/frogcall_markdown_script.Rmd
@@ -5,7 +5,7 @@ date: "February 19, 2019"
 output: pdf_document
 ---
 
-Climate change shifts plants' and animals' seasonal schedules, because events like breeding, migration, and metamorphosis are timed by climate cues. Here, I examine this response in populations of frogs in East Texas. 20 years ago, a collaborator in the USDA installed audio recorders in 8 ponds in East Texas. These recorders are programmed to record 6 times daily, capturing the breeding calls of frogs at the ponds. I've analyzed this data in R to measure if/how frog breeding timing is shifting and how this will affect frogs' interactions with each other. I was the lead author on this project, meaning I conceptualized the questions, performed all data management and analysis, and interpreted and wrote up results for publication. This RMarkdown document provides a summary of the analysis for one of two major questions for this project. For more information, please feel free to contact me at skcarter25@gmail.com or see the full publication in [Ecology Letters](https://shannonkcarter.weebly.com/uploads/1/2/2/1/122153528/cartersaenzrudolf_ele2018.pdf).
+Climate change shifts plants' and animals' seasonal schedules, because events like breeding, migration, and metamorphosis are timed by climate cues. Here, I examine this response in populations of frogs in East Texas. 20 years ago, a collaborator in the USDA installed audio recorders in 8 ponds in East Texas. These recorders are programmed to record 6 times daily, capturing the breeding calls of frogs at the ponds. I've analyzed this data in R to measure if/how frog breeding timing is shifting and how this will affect frogs' interactions with each other. I was the lead author on this project, meaning I conceptualized the questions, performed all data management and analysis, and interpreted and wrote up results for publication. This RMarkdown document provides a summary of the analysis for one of the two major questions for this project. For more information, please feel free to contact me at skcarter25@gmail.com or see the full publication in [Ecology Letters](https://shannonkcarter.weebly.com/uploads/1/2/2/1/122153528/cartersaenzrudolf_ele2018.pdf).
 
 ```{r setup, include = F}
 knitr::opts_chunk$set(echo = TRUE)
@@ -47,9 +47,6 @@ p6 <- read.csv("CallingDataPond6.csv")
 p7 <- read.csv("CallingDataPond7.csv")
 p8 <- read.csv("CallingDataPond8.csv")
 
-## DAILY SUM AND YEARLY CUMULATIVE CALL FOR ALL Y-P-S
-daily <- read.csv("dailycalls.csv", header = T)
-
 ## UNFILTERED ALL SP OVERLAP MATRIX
 all <- read.csv("overmat.csv")
 
@@ -71,20 +68,22 @@ over_year_err  <- read.csv("over_year_err.csv", header = T)   ## OVERLAP ~ YEAR
 ```
 
 ## Process and tidy raw data
-We have 8 raw data files, each representing 1 pond. Each row represents one time point (6 per day from May 2000 through Dec. 2018) and includes the number of calls made by 12 species of frogs (in columns)
+We have 8 raw data files, each representing 1 pond. Each row represents one time point (6 per day from May 2000 through Dec. 2018) and includes the number of calls made by 12 species of frogs (in columns).
 ```{r, echo = F, warning = F}
 p1test <- p1
 p1test$TIME <- NULL
 p1test$DATE <- NULL
 head(p1test)
 ```
-Here, I merge the data for the ponds, melt to long format, sum the six daily observations, and adjust time & date format.
+
+Here, I merge the data frames for the eight ponds, melt to long format, sum the six daily observations, and adjust time & date format.
 ```{r, echo = T, results = 'hide', warning = F}
 
 ## Stack raw data into one df
 p18 <- rbind(p1, p2, p3, p4, p5, p6, p7, p8)
+p18 <- p18[p18$YEAR != 2000 ,]   # 2000 is an incomplete year, so we drop it
 
-## Change to long format and rename columns
+## Melt to long format and rename columns
 mp18 <- melt(p18, id.vars = c("POND", "YEAR", "FROGTIME","FROGDATE"),
              measure.vars = c("HV", "HC", "BV", "BW", "RCA", "RCL", 
                               "RS", "GC", "PC", "PT", "AC", "RP")) # codes for 12 species
@@ -96,33 +95,38 @@ time1 <- strptime(time,"%m/%d/%Y %H:%M")
 time2 <- as.POSIXlt(time1)
 time3 <- as.Date(time2, "%m/%d/%Y %H:%M")
 mp18$time <- time3
-mp18 <- subset(mp18, select = c("pond", "year", "time", "sp", "calls"))
+mp18$doy <- as.numeric(strftime(mp18$time, format = "%j"))  # adding a 'day of year'
+mp18 <- subset(mp18, select = c("pond", "year", "time","doy", "sp", "calls"))
 
-## Sum all 6 daily observations
-sums <- mp18 %>%
-  group_by(pond, year, time, sp) %>%
+## Sum all 6 daily observations and convert to df
+daily <- mp18 %>%
+  group_by(pond, year, time, doy, sp) %>%
   summarize(dailysum = sum(calls))
+daily <- as.data.frame(daily)
 
-## Clean it up and write it
-daily$doy <- as.numeric(strftime(daily$time, format = "%j"))  # adding a 'day of year'
-daily <- daily[daily$year != 2000 ,]   # 2000 is an incomplete year, so we drop it
+```
+
+The result is a tidy long format data set with one observation per row
+
+```{r, echo = F}
+daily[15048:15055,]
 
 ```
 
 ## Visualizing the raw data
 
-This custom function allows me to plot the overlapping distributions of any two species in any year and pond. The example plot shows number of calls over time for the gray tree frog (in orange) and the green frog (in blue) in 2007 at pond 4. The major objective of this project was to calculate how the area of overlap (visible in the plot at the area where the blue and orange distributions intersect) changed across years for pairwise combinations of species. This would tell us if climate change-driven shifts in breeding timing influence the competition between species. 
-```{r, warning = F}
+The above dataset gives time series for the calling behavior of each frog species. Using lowess functions, I can transform the time series into smooth distributions. This makes it easier to visualize when the frogs are active through the year and also enables quantification. Here's an example of those distributions for the gray tree frog (in orange) and the green frog (in teal) in 2007 at pond 4. The major objective of this project was to calculate how the area of overlap (visible in the plot at the area where the orange and teal distributions intersect) changed across years for pairwise combinations of species. This would tell us if climate change-driven shifts in breeding timing influence the competition between species. 
+```{r, echo = F, warning = F}
 
 ## The function takes four inputs: year, pond, species 1, and species 2
-## I applied the function to all combinations of these parameters
+
 overlapplot <- function(s1, s2, y, p) {
   
   ## Subset year and pond of interest for each species
   s1 <- subset(daily, subset = (sp == s1 & year == y & pond == p))
   s2 <- subset(daily, subset = (sp == s2 & year == y & pond == p))
   
-  ## Run lowess functions-- this smoothes scatter plot data into a distribution
+  ## Run lowess functions-- this smoothes the time series data into a distribution
   ## f, iter, and delta are parameters that control the degree and method of smoothing
   l1 <- as.data.frame(lowess(s1$dailysum, f = 1/20, iter = 3, delta = 4))
   l2 <- as.data.frame(lowess(s2$dailysum, f = 1/20, iter = 3, delta = 4))
@@ -132,28 +136,31 @@ overlapplot <- function(s1, s2, y, p) {
   
   ## Plot
   p <- ggplot(l, aes(x = day, y = max(s1, s2))) +
-    xlab("Day of year") + ylab("Number of calling frogs") +
-    geom_line(size = 2.5, colour = "darkorange", aes(x = day, y = s1, stat = "identity", position = "dodge")) +
-    geom_line(size = 2.5, colour = "blue4",      aes(x = day, y = s2, stat = "identity", position = "dodge")) +
-    geom_ribbon(aes(x = day, ymax = s1), ymin = 0, fill = "orangered", alpha = 0.5) +
-    geom_ribbon(aes(x = day, ymax = s2), ymin = 0, fill = "navy",     alpha = 0.5) +
+    geom_line(aes(x = day, y = s1, stat = "identity", position = "dodge"),
+              size = 2.5, colour = "#F28335") +
+    geom_line(aes(x = day, y = s2, stat = "identity", position = "dodge"),
+              size = 2.5, colour = "#489C92") +
+    geom_ribbon(aes(x = day, ymax = s1), ymin = 0, fill = "#F28335", alpha = 0.75) +
+    geom_ribbon(aes(x = day, ymax = s2), ymin = 0, fill = "#489C92", alpha = 0.75) +
     theme(panel.border = element_rect(colour = "black", fill = NA, size = 1.5),
           axis.text.y = element_text(size = 16),
           axis.text.x = element_text(size = 16),
           axis.title.y = element_text(size = 16),
-          axis.title.x = element_text(size = 16))
+          axis.title.x = element_text(size = 16)) + 
+    xlab("Day of year") + ylab("Number of calling frogs")
   
   print(p)
 }
 
+
 ## Now, we can input any species pair and year to visualize
-## This is useful for spotchecking our analysis and providing a visual reference for the workflow
+## I use this to spotcheck analysis and provide a visual reference for the workflow
 overlapplot("RCL", "HV", 2007, 4) 
 ```
 
 ## Function to calculate overlap for every species pair
 
-Now, I want to calculate the overlap between each species pair for each year and at each pond. To do this, I built a custom function that 1) subsets the data by species, year, and pond 2) makes loess smoothed distributions of calling activity for each species through the year 3) calculates the integrated area of overlap between the two species. I then apply this function to all 132 pairings of species at each of 8 site and each of 15 years. 
+Now, I want to calculate the area of intersection between species calling distributions (depicted above), but for all the species and all the years and all the ponds. To do this, I wrote a custom function that 1) subsets the data by species, year, and pond 2) makes lowess smoothed distributions of calling activity for each species 3) calculates the integrated area of intersection between the two species' lowess distributions. I then apply this function to all 132 pairings of species at each of the 8 sites and for each of the 17 years. 
 ```{r, warning = F}
 
 ## The function take 4 inputs: year, pond, species 1 and species 2 
@@ -164,17 +171,22 @@ overlapmatrix <- function(y, p, s1, s2) {
   of1 <- subset(daily, subset = (sp == s1 & year == y & pond == p))
   of2 <- subset(daily, subset = (sp == s2 & year == y & pond == p))
   
-  ## Lowess function for each
+  ## Run lowess functions-- this smoothes the time series data into a distribution
+  ## f, iter, and delta are parameters that control the degree and method of smoothing
   lf1 <- lowess(of1$dailysum, f = 1/50, iter = 3, delta = 4)
   lf2 <- lowess(of2$dailysum, f = 1/50, iter = 3, delta = 4)
   
   ## Calculate overlap
-  d     <- data.frame(day = lf1$x,    # make a data frame with time as x
-                      frog1 = lf1$y,  # and each species' lowess curve as a separate y
-                      frog2 = lf2$y)
-  d$min <- pmin(d$frog1, d$frog2)     # the upper bound of the integrated area the lower lowess curve 
-  inter <- integrate.xy(d$day, d$min)  
-  prop1 <- inter/integrate.xy(d$day, d$frog1) # make overlap a proportion of the overlapping area relative to whole area for each sp
+  # make a dataframe with time as x and each species' lowess curve as a separate y
+  d <- data.frame(day = lf1$x,    
+                  frog1 = lf1$y,  
+                  frog2 = lf2$y)
+  # designate the lower lowess because this will be the ceiling of the integrated area
+  d$min <- pmin(d$frog1, d$frog2)  
+  # inegrated area of curves is time x the lower lowess curve
+  inter <- integrate.xy(d$day, d$min) 
+  # standardize overlap by making it a proportion of each species' full distribution 
+  prop1 <- inter/integrate.xy(d$day, d$frog1) 
   prop2 <- inter/integrate.xy(d$day, d$frog2)
   
   ## Designate and return output
@@ -191,84 +203,70 @@ head(all)
 
 ```
 
-## Overlap trend across years
-
-Now, I want to see how the area of overlap changes across years for each species pair. To do this, I built a custom function that 1) subsets the dataframe built above by species pair and pond 2) runs a linear model of overlap predicted by year 3) returns model diagnostics. I then apply this function to all 132 pairings of species and 8 ponds.
-
-```{r, warning = F}
-
-## The function take two inputs: species pair and pond 
-## I applied the function to all combinations of these parameters
-overlaptrend <- function(sp, p) {
-  
-  ## Subset each species-pond
-  s <- subset(fall, spsp == sp & pond == p)
-  
-  ## Linear model
-  l  <- lm(overlap ~ year, data = s)     
-  ls <- summary(l) 
-  
-  ## Extract regression coefficient
-  c  <- round(coef(l)[2], 3)             # regression slope
-  r  <- round(ls$r.squared, 3)           # r-squared
-  pv <- round(ls$coefficients[2, 4], 3)  # p-value
-  
-  ## Output- species pairs and model diagnostics
-  out <- cbind(sp, p, c, r, pv)
-  return(out)
-}
-
-```
-
 ## Plotting all results
+
 Now, we want to see how overlap between species temporal distributions changes across years for each species pair. This plot shows the regressions for each year, but it's super hard to read and ugly. In this figure, each color represents a species pair. The slope of the line indicates how the overlap in calling between that species pair changed across the 15 year period of this data. Positive slopes indicate that overlap increased, negative slopes indicate that overlap decreased.
 ```{r, echo = F, warning = F}
 
-oy <- ggplot(fall, aes(x = year, y = overlap, color = factor(spsp))) + 
+oy_scatter <- ggplot(fall, aes(x = year, y = overlap, color = factor(spsp))) + 
   geom_point(size = 4, alpha = 0.25) +
   stat_smooth(method = lm, size = 2, se = F) +
   labs(color = "species pair") +
   theme(panel.border = element_rect(colour = "black", fill = NA, size = 1.5)) +
   ylab("Overlap in calling phenology") + xlab("Year")
-oy
+oy_scatter
 
 ```
 
-The info we really want from this figure is the slope of each line and the amount of error around that slope (from replicate ponds). The following figure gives exactly that and is much easier to interpret. Here, each row represents a species pair. Black points represent the average regression slope (pictured above) with error from pond replicates. Colored points represent the regression slope for each pond
+The info we really want from this figure is the slope of each line and the amount of error around that slope (from replicate ponds). The following figure gives exactly that and is much easier to interpret. Here, each row represents a species pair. Black points represent the average regression slope with error from pond replicates. Colored points represent the regression slope for each pond. Points that are positive indicate overlap increased across years. Points that are negative indicate that overlap decreased across years
 
-```{r, warning = F, fig.height = 8, fig.width = 6}
-
-## Order species pairs based on the magnitude of the regression slope so it's easier to see overall pattern
-over_year$spsp = with(over_year, factor(spsp, levels = rev(levels(spsp))))
+```{r, warning = F, fig.height = 7.5, fig.width = 5.5}
 
 ## Overlap trend over years for each species pair
 oy <- ggplot(over_year, aes(x = coef, y = reorder(spsp, coef))) + mytheme +
   
   ## Ponds shown independently
-  geom_point(size = 3, alpha = 0.75, aes(color = as.factor(pond))) + 
+  geom_point(size = 3, alpha = 0.75, 
+             aes(color = as.factor(pond))) + 
   
   ## Average of all 8 ponds
   geom_point(size = 4, colour = "black", shape = 18,
              data = over_year_err, aes(x = coef, y = spsp)) + 
   
   ## SE bars on averages
-  geom_errorbarh(data = over_year_err, size = 1, aes(xmin = coef - se, xmax = coef + se, height = 0)) +
-
+  geom_errorbarh(size = 1, height = 0, 
+                 data = over_year_err, aes(xmin = coef - se, xmax = coef + se)) +
+  
+  ## Lines to visually separate species pairs
+  geom_hline(yintercept = seq(1.5, length(over_year$spsp), 1), 
+             color = "lightgray", linetype = 2) +
+  
+  ## Add a marker at 0 to show show the position where overlap stays constant across years
+  ## Positive values indicate increasing overlap; negative indicates decreasing overlap
+  geom_vline(xintercept = 0, size = 1, linetype = 2) +
+  
   ## Style elements
   theme(panel.border = element_rect(colour = "black", fill = NA, size = 2),
         axis.text.y = element_text("mono", size = 12),
         axis.text.x = element_text(size = 15),
-        legend.position = c(0.05, 0.85),
+        legend.position = c(0.05, 0.83),
         axis.title.x = element_text(size = 13),
         axis.title.y = element_text(size = 15),
         legend.background = element_blank(),
         legend.box.background = element_rect(colour = "black")) +
-  geom_hline(yintercept = seq(0.5, 48.5, 1), color = "lightgray", linetype = 2) +
-  geom_vline(size = 1.5, linetype = 2,  xintercept = 0) +
-  xlab("Regression slope \n(numerical overlap ~ year)") + ylab("Species pair") + labs(color = 'pond') +
+  
+  ## Labels for axes and legend
+  labs(x = "Regression slope \n(numerical overlap ~ year)", 
+       y = "Species pair",
+       color = 'pond') +
+  
   ## Add a Wes Anderson color palette for extra fun
   scale_color_manual(values = wes_palette(n = 8, name = "Zissou1", type = 'continuous'))
 
+## Add a marginal histogram so it's easier to see the overall pattern
+oy <- ggMarginal(oy, size = 7, margins = "x", type = "histogram",
+                 col = "black", fill = "black", alpha = 0.75)
 oy
 ```
 
+Here, we can see that most points are positive and the marginal histogram is right skewed. This means that it was common for frogs to increase their overlap in breeding through the 17 year period we measured. We suspect this is a result of climate change. Typically, frogs try to partition their breeding in time. But most species can only breed (and therefore they only call) when it's raining. In this region, climate change has resulted in long periods of dry with rare but large rain events. This forces frogs to cluster their calling around these few rain opportunities. The outcome is greater competition for the resulting offspring, which should reduce survival over time.
